- fixed #45 hamburger to hide columns is now visible on grids with header - added grid example with hideable columns

--- a/material-addon/src/main/webapp/VAADIN/themes/material/components/v-grid.scss
+++ b/material-addon/src/main/webapp/VAADIN/themes/material/components/v-grid.scss
@@ -36,6 +36,9 @@ body.v-gecko .v-grid-scroller.v-grid-scroller-horizontal > div {
   .v-grid.borderless {
     overflow: hidden;
   }
+  .v-grid-sidebar.v-contextmenu {
+    z-index: 10;
+  }
   .v-grid-row-selected > .v-grid-cell {
     color: inherit;
     border-top: 1px solid $v-table-border-color;
